Bug 281720 - Sort by date should use DateTimeOriginal not DateTime
Summary: Sort by date should use DateTimeOriginal not DateTime
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-09 22:02 UTC by Nicolas Pomarede
Modified: 2012-10-19 13:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Pomarede 2011-09-09 22:02:38 UTC
Version:           unspecified (using KDE 4.6.4) 
OS:                Linux

Hello

from the results I get, it seems that when gwenview is sorting thumbnails by date, it uses exif field 0x0132 (DateTime), but this date could change if you process the photo later (remove red eye, convert from raw to jpeg, ...)

It would gives better results to use the DateTimeOriginal at which the photo was really taken, not the DateTime at which the photo was changed by another software.

Could it be possible that gwenview uses exif tag 0x9003 (DateTimeOriginal) to sort thumbnails by date ? (or to have an option to choose between DateTime and DateTimeOriginal).

Digikam is using DateTimeOriginal to sort exif photos (it previously used DateTime), which according to various bug report seems closer to what the user expects.

Thanks



Reproducible: Always

Steps to Reproduce:
Get some photos taken 2 years ago, modify one of them (remove red eyes, whatever) in order to modify its DateTime field.
Sort photos by date, the modified one will be the most recent, but from the point of view of when the photo was really taken, it should not change the sort results


Expected Results:  
Sort result should not change when DateTime changes, DateTimeOriginal should have the priority to determine the sort result.
Comment 1 Sebastian Frei 2011-11-29 12:12:18 UTC
Have a look at bug 242332 ( https://bugs.kde.org/show_bug.cgi?id=242332 ), maybe one could solve both bugs/wishes with one configuration option.
Comment 2 Anirudh 2012-01-05 10:15:59 UTC
Bug 286412 and Bug 139735 look like duplicates of the above bug.
Comment 3 Aurelien Gateau 2012-07-10 14:00:01 UTC
Git commit e7264feff5adab7e93b1c87fbbb6c38cf4cc43d9 by Aurélien Gâteau.
Committed on 10/07/2012 at 15:58.
Pushed by gateau into branch 'KDE/4.9'.

Fix sort-by-date to use Exif.Photo.DateTimeOriginal if available
FIXED-IN: 2.9.0

M  +20   -2    lib/timeutils.cpp
M  +14   -3    tests/auto/timeutilstest.cpp
M  +1    -0    tests/auto/timeutilstest.h
A  +-    --    tests/data/date/exif-datetime-only.jpg
A  +-    --    tests/data/date/exif-datetimeoriginal.jpg

http://commits.kde.org/gwenview/e7264feff5adab7e93b1c87fbbb6c38cf4cc43d9
Comment 4 FF777 2012-07-12 03:12:06 UTC
Um, does this let me choose how it sorts?..
I am just afraid that to have all pictures sorted using the same method, I am going to have to erase EXIF data from every picture so that it uses the date-time like I want it to..
If it only uses date-time when no EXIF data is present, that means some of my pictures are going to be sorted by exif, and some sorted by date-time..

I save a lot of random pictures from the internet all the time, and I like the ones that I recently saved to my hard-drive to show up first (or last depending on ascending or descending order)..
A lot of pictures I save will have random EXIF dates from like 2007 or some thing, and so even though I just saved a new picture from the internet, it will show up like in the middle of all my pictures because gwenview thinks it is super old, just because the original person who took that picture took it in like 2007 or some thing..