Fix sort-by-date to use Exif.Photo.DateTimeOriginal if available

BUG: 281720
FIXED-IN: 2.9.0